RESOLVED FIXED309976
Invalid attribute type in one animation group prevents all subsequent animation groups from running
https://bugs.webkit.org/show_bug.cgi?id=309976
Summary Invalid attribute type in one animation group prevents all subsequent animati...
Ahmad Saleem
Reported 2026-03-15 01:25:25 PDT
While I was trying to investigate another WPT failure (Which we need to still add - it was timing out) and I noticed this is because of this bug and after this fix, we pass that test as well without any change. SOLID! So just doing this PR first to fix the issue.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-15 01:25:31 PDT
Ahmad Saleem
Comment 2 2026-03-15 01:28:22 PDT
EWS
Comment 3 2026-03-17 15:42:05 PDT
Committed 309436@main (297f976adf7c): <https://commits.webkit.org/309436@main> Reviewed commits have been landed. Closing PR #60651 and removing active labels.
Ahmad Saleem
Comment 4 2026-03-17 16:04:15 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/58570
Note You need to log in before you can comment on or make changes to this bug.