[SVG] Invalid attribute type in one animation group prevents all subsequent animation groups from running https://bugs.webkit.org/show_bug.cgi?id=309976 rdar://172593109

Reviewed by Said Abou-Hallawa.

SMILTimeContainer::updateAnimations() used return instead of continue when
encountering an animation group whose first animation had an invalid
attribute type. This caused the entire function to exit, preventing all
subsequent animation groups from being processed, their events from
being dispatched, and the animation timer from being restarted.

Without this fix, we timeout on one of below tests while fail another.
Added another test based on Said's input for subsequent animation.

* Source/WebCore/svg/animation/SMILTimeContainer.cpp:
(WebCore::SMILTimeContainer::updateAnimations):
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/invalid-attribute-type-does-not-block-begin-event-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/invalid-attribute-type-does-not-block-begin-event.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/invalid-attribute-type-does-not-block-other-animations-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/invalid-attribute-type-does-not-block-other-animations.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/invalid-attribute-type-does-not-block-same-group-animation-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/animations/invalid-attribute-type-does-not-block-same-group-animation.html: Added.

Canonical link: https://commits.webkit.org/309436@main