Source/WebCore/svg/animation/SMILTimeContainer.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2008-2025 Apple Inc. All rights reserved.
+ * Copyright (C) 2008-2026 Apple Inc. All rights reserved.
  * Copyright (C) 2013 Google Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -292,7 +292,7 @@ void SMILTimeContainer::updateAnimations(SMILTime elapsed, bool seekToTime)
             // Results are accumulated to the first animation that animates and contributes to a particular element/attribute pair.
             if (!firstAnimation) {
                 if (!animation->hasValidAttributeType())
-                    return;
+                    continue;
                 firstAnimation = animation.copyRef();
             }
 
